<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_choose_level_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="26dp"
        android:gravity="center"
        android:text="@string/str_choose_level"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_choose_test_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/test_level" />

    <Button
        android:id="@+id/btn_choose_easy_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/str_easy_level"
        android:backgroundTint="@android:color/holo_green_light"/>

    <Button
        android:id="@+id/btn_choose_normal_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/str_easy_level"
        android:backgroundTint="@android:color/holo_orange_light"/>

    <Button
        android:id="@+id/btn_choose_hard_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:text="@string/str_easy_level"
        android:backgroundTint="@android:color/holo_red_light"/>
</LinearLayout>