<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:contentDescription="@string/str_welcome_title"
                android:foregroundGravity="center"
                android:src="@drawable/ic_brain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_welcome_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:gravity="center"
                android:text="@string/str_welcome_title"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_img" />

            <TextView
                android:id="@+id/tv_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                android:text="@string/str_rules"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_welcome_title" />

            <Button
                android:id="@+id/btn_understand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="26dp"

                android:text="@string/str_understand"
                app:layout_constraintTop_toBottomOf="@+id/tv_rules" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>